<resources>

    <string name="app_name">Stroll Charlton</string>
    <string name="google_api_key">AIzaSyBgi62YNvrWgj728-nqnVmMrbs7BYX5YGY</string>

    <!--Toolbar-->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="satellite_view">Satellite View</string>
    <string name="terrain_view">Terrain View</string>

    <!--Settings-->
    <string name="settings_detail">Settings detail</string>

    <!--About-->
    <string name="about_detail">This app was designed and coded by Lara Ruffle Coles</string>

    <!--Activity Detail Titles-->
    <string name="charlton_house_detail_title">Charlton House</string>

    <!--Activity Detail URLs-->
    <string name="charlton_house_url_link"><a href="http://www.charlton-house.org">Website</a></string>

    <!--Activity Detail Texts-->
    <string name="charlton_house_detail_text">Jacobean building in the south-east London suburb of Charlton.
        \n\nBuilt in 1612 during the reign of James I for his son Prince Henry\'s tutor Sir Adam Newton. Presumed to have been designed by John Thorpe.
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        \n</string>

</resources>